feat: stabilize jcr with JDK 17 - EXO-58815 (#283)
add necessary argLines and fix java doc